tests/test_input_files/good/test_good_expression_7.punkt
main {
	var x = <> -> <> -> <> -> int { return <> -> <> -> int { return <> -> int { return 0. }. }. }()()().
	println x.
}
