tests/test_input_files/bad/test_bad_return_stmt_10.punkt
function f <> -> int {
	if true {
		var x = 0.
	} else if false {
		return 0.
	} else {
		return 1.
	}
}

main {
	f().
}
